--- a/Site_01/css/style.css
+++ b/Site_01/css/style.css
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
+body {
+    /* font-family: 'Roboto Thin' 'Roboto Light' 'Roboto Regular' 'Roboto Bold' 'Roboto Black', sans-serif; */
+    font-family: 'Roboto', sans-serif;
+}
+
 .container {
   position: relative;
   width: 1140px;
@@ -23,7 +28,7 @@
 
 .logo .logo_text {
   color: #ffffff;
-  font-family: "Roboto";
+  /* font-family: "Roboto"; */
   font-size: 15px;
   font-weight: 500;
   line-height: 24px;
@@ -38,7 +43,7 @@ h1 {
 
 .title {
   font-size: 41px;
-  font-family: "Roboto - Black";
+  /* font-family: "Roboto Black"; */
   color: #f9bf3b;
   text-transform: uppercase;
   line-height: 24px;
@@ -52,7 +57,7 @@ h2.title {
 
 .simple .title_big {
   font-size: 80px;
-  font-family: "Roboto - Black";
+  /* font-family: "Roboto - Black"; */
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
@@ -64,7 +69,7 @@ h2.title {
   padding: 0 13px;
   margin-top: 23px;
   font-size: 21px;
-  font-family: "Roboto Light";
+  /* font-family: "Roboto Light"; */
   color: #ffffff;
   line-height: 28px;
   font-weight: 300;
@@ -73,7 +78,7 @@ h2.title {
 
 .promo .promo_text span {
   color: #f9bf3b;
-  font-family: "Roboto - Bold";
+  /* font-family: "Roboto - Bold"; */
   font-weight: 700;
 }
 
@@ -88,7 +93,7 @@ h2.title {
   background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
   box-shadow: -1px -1px 0px 0px rgba(0,0,0,0.21);
   border-radius: 5px;
-  font-family: "Roboto Condensed";
+  /* font-family: "Roboto Condensed"; */
   font-size: 21px;
   line-height: 24px;
   font-weight: 400;
@@ -103,7 +108,7 @@ h2.title {
 }
 
 .more .more_text {
-  font-family: "Roboto - Thin";
+  /* font-family: "Roboto - Thin"; */
   font-size: 15px;
   font-weight: 400;
   text-transform: uppercase;
@@ -124,7 +129,7 @@ h2.title {
 }
 
 .waiting .waiting_header, .finish .finish_header {
-  font-family: "Roboto";
+  /* font-family: "Roboto"; */
   font-size: 30px;
   line-height: 12px;
   font-weight: 400;
@@ -147,7 +152,7 @@ h2.title {
 
 .waiting .waiting_subheader {
   margin-top: 17px;
-  font-family: "Roboto";
+  /* font-family: "Roboto"; */
   font-size: 23px;
   line-height: 20px;
   font-weight: 400;
@@ -173,7 +178,7 @@ h2.title {
 
 .waiting .waiting_wrapper .waiting_item .waiting_descr {
   margin-top: 33px;
-  font-family: "Roboto";
+  /* font-family: "Roboto"; */
   font-size: 15px;
   line-height: 21px;
   font-weight: 300;
@@ -187,7 +192,7 @@ h2.title {
 
 .optimization .optimization_header {
     margin-left: 391px;
-    font-family: Roboto - Black;
+    /* font-family: Roboto - Black; */
     font-size: 29px;
     font-weight: 400;
     text-transform: uppercase;
@@ -197,7 +202,7 @@ h2.title {
 .optimization .optimization_text {
     margin-top: 25px;
     margin-left: 391px;
-    font-family: "Roboto - Light";
+    /* font-family: "Roboto - Light"; */
     font-size: 17px;
     line-height: 27px;
     font-weight: 300;
@@ -205,7 +210,7 @@ h2.title {
 }
 
 .optimization .optimization_text span {
-    font-family: "Roboto - Bold";
+    /* font-family: "Roboto - Bold"; */
     font-weight: 700;
 }
 
@@ -246,7 +251,7 @@ h2.title {
 .finish .finish_wrapper .finish_item .finish_descr {
     margin-top: 25px;
     text-align: center;
-    font-family: Roboto;
+    /* font-family: Roboto; */
     font-size: 17px;
     line-height: 20px;
     font-weight: 300;
@@ -266,7 +271,7 @@ h2.title {
 
 .subscribe .subscribe_text {
     margin-top: 42px;
-    font-family: Roboto;
+    /* font-family: Roboto; */
     font-size: 30px;
     line-height: 43px;
     font-weight: 400;
@@ -294,7 +299,7 @@ h2.title {
 
 .first .first_header_one {
     margin-top: 37px;
-    font-family: Roboto;
+    /* font-family: Roboto; */
     font-size: 30px;
     line-height: 12px;
     font-weight: 400;
@@ -304,7 +309,7 @@ h2.title {
 
 .first .first_header_two {
     margin-top: 30px;
-    font-family: Roboto;
+    /* font-family: Roboto; */
     font-size: 36px;
     line-height: 12px;
     font-weight: 900;
@@ -314,7 +319,7 @@ h2.title {
 
 .first .first_text {
     margin-top: 25px;
-    font-family: Roboto;
+    /* font-family: Roboto; */
     font-size: 23px;
     line-height: 20px;
     font-weight: 400;
@@ -340,7 +345,7 @@ h2.title {
 }
 
 .footer .footer_a, .footer_text, .separator {
-    font-family: Roboto;
+    /* font-family: Roboto; */
     font-size: 15px;
     line-height: 21px;
     font-weight: 300;
