--- a/site_03/src/sass/blocks/_header.scss
+++ b/site_03/src/sass/blocks/_header.scss
@@ -24,7 +24,7 @@
         font-size: 18px;
         font-weight: 700;
         &:hover {
-            color: #ffffff;
+            color: #fff;
             text-decoration: none;
         }
     }
