--- a/site_03/src/sass/style.scss
+++ b/site_03/src/sass/style.scss
@@ -2,6 +2,10 @@
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
+@import "blocks/advantages";
+@import "blocks/titles";
+@import "blocks/consultations";
+@import "blocks/forms";
 
 * {
     font-family: "Museo Sans Cyrl", sans-serif;
