--- a/site_03/src/sass/style.scss
+++ b/site_03/src/sass/style.scss
@@ -6,6 +6,7 @@
 @import "blocks/titles";
 @import "blocks/consultations";
 @import "blocks/forms";
+@import "blocks/carousel";
 
 * {
     font-family: "Museo Sans Cyrl", sans-serif;
