--- a/site_4/css/style.css
+++ b/site_4/css/style.css
@@ -502,15 +502,12 @@ template {
   margin-top: 25px;
 }
 
-.no-webp .promo {
-  background: url("../img/main_bg.jpg") center center/cover no-repeat; }
-
 .promo {
   min-height: 100vh;
-  padding-top: 212px;
+  padding-top: 200px;
+  background: url("../img/main_bg.jpg") center center/cover no-repeat;
   position: relative;
   display: grid;
-  margin-bottom: 120px;
 }
 
 .promo__subtitle {
@@ -664,7 +661,8 @@ template {
 
 .menu__list {
   list-style-type: none;
-  padding-left: 35px;
+  padding-left: 0px;
+  margin-bottom: 0;
 }
 
 .menu__item {
@@ -673,6 +671,7 @@ template {
   font-size: 24px;
   line-height: 36px;
   margin-bottom: 15px;
+  padding-left: 35px;
 }
 
 .menu__item:last-child {
@@ -682,7 +681,7 @@ template {
 .menu__item:before {
   content: '';
   position: absolute;
-  left: -35px;
+  left: 0;
   top: 10px;
   width: 15px;
   height: 15px;
@@ -732,6 +731,7 @@ template {
 }
 
 .about {
+  padding-top: 120px;
   margin-bottom: 120px;
 }
 
@@ -1024,6 +1024,13 @@ template {
   gap: 5px;
 }
 
+.works__item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .works__vertical {
   grid-row: 1/3;
   grid-column: 4/5;
@@ -1202,4 +1209,320 @@ template {
       align-self: center;
 }
 
-.webp .promo { background: url(../img/main_bg.webp) center center/cover no-repeat; }
+@media (max-width: 1439px) {
+  .sidepanel {
+    display: none;
+  }
+}
+
+@media (max-width: 1400px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .about__wrapper {
+    grid-template-columns: 400px 540px;
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
+  }
+
+  .about__cards {
+    grid-template-columns: repeat(2, 260px);
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
+  }
+
+  .skills__cards {
+    grid-template-columns: repeat(auto-fit, 270px);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .skills__sidebars {
+    grid-template-columns: repeat(2, 350px);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .works {
+    grid-template-columns: repeat(auto-fit, 280px);
+    grid-auto-rows: 280px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    row-gap: 35px;
+  }
+
+  .works__vertical,
+  .works__horizontal {
+    grid-row: unset;
+    grid-column: unset;
+  }
+
+  .contacts__wrapper {
+    grid-template-columns: 400px 405px;
+  }
+
+  .contacts__form {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(45px, auto);
+  }
+
+  .contacts__triggers {
+    grid-template-columns: unset;
+  }
+
+  .contacts__btn {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+
+  .contacts__policy {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+
+  .contacts__input input {
+    width: 100%;
+  }
+
+  .contacts__textarea textarea {
+    width: 100%;
+  }
+
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 992px) {
+  .about__wrapper {
+    grid-template-columns: 300px 400px;
+  }
+
+  .about__img {
+    height: 500px;
+  }
+
+  .about__cards {
+    grid-template-columns: 400px;
+  }
+
+  .title--fz36 {
+    font-size: 32px;
+  }
+
+  .card {
+    width: auto;
+    grid-template-columns: 40px 340px;
+  }
+
+  .experience__wrapper {
+    grid-template-columns: repeat(2, 290px);
+    -webkit-column-gap: 130px;
+       -moz-column-gap: 130px;
+            column-gap: 130px;
+  }
+
+  .list-item {
+    width: auto;
+    grid-template-columns: 40px 190px;
+  }
+
+  .list-item__descr::before {
+    height: calc(100% + 115px);
+  }
+
+  .price__wrapper {
+    grid-template-columns: repeat(auto-fit, 366px);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    row-gap: 20px;
+    margin-bottom: 40px;
+  }
+
+  .contacts__img {
+    display: none;
+  }
+
+  .contacts__wrapper {
+    grid-template-columns: 1fr;
+  }
+
+  .contacts__triggers {
+    grid-template-columns: inherit;
+    justify-self: end;
+  }
+
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (max-width: 768px) {
+  .about__wrapper {
+    grid-template-columns: 1fr;
+  }
+
+  .about__column {
+    margin-bottom: 40px;
+  }
+
+  .about__column:last-child {
+    margin-bottom: 0;
+  }
+
+  .about__cards {
+    grid-template-columns: repeat(2, 260px);
+  }
+
+  .card {
+    grid-template-columns: 40px 200px;
+  }
+
+  .experience__wrapper {
+    grid-template-columns: 1fr;
+  }
+
+  .experience__column {
+    margin-bottom: 40px;
+  }
+
+  .experience__column:last-child {
+    margin-bottom: 0;
+  }
+
+  .list-item {
+    grid-template-columns: 40px 1fr;
+  }
+
+  .skills__sidebars {
+    grid-template-columns: 540px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .sidebar {
+    width: 540px;
+  }
+
+  .line {
+    width: 100%;
+  }
+
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (max-width: 576px) {
+  .promo {
+    background: url("../img/main_bg.webp") 58% center/cover no-repeat;
+  }
+
+  .promo .title--fz48 {
+    font-size: 26px;
+    line-height: 39px;
+  }
+
+  .promo__title {
+    width: 300px;
+    margin-bottom: 32px;
+  }
+
+  .promo .hamburger {
+    right: 20px;
+  }
+
+  .menu__block {
+    width: 250px;
+    padding-left: 20px;
+    height: 100vh;
+  }
+
+  .title--fz36 {
+    font-size: 24px;
+    line-height: 36px;
+  }
+
+  .about {
+    padding-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .about__cards {
+    grid-template-columns: 1fr;
+  }
+
+  .about__img {
+    height: 340px;
+  }
+
+  .experience {
+    margin-bottom: 40px;
+  }
+
+  .experience__title {
+    margin-bottom: 55px;
+  }
+
+  .skills__sidebars {
+    grid-template-columns: 1fr;
+    margin-bottom: 40px;
+  }
+
+  .sidebar {
+    width: 100%;
+    grid-template-columns: auto auto;
+  }
+
+  .square {
+    justify-self: center;
+  }
+
+  .works {
+    margin-bottom: 40px;
+  }
+
+  .price__wrapper {
+    grid-template-columns: repeat(auto-fit, 300px);
+  }
+
+  .contacts__wrapper {
+    margin-bottom: 50px;
+  }
+
+  .contacts__form {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+
+  .contacts__textarea {
+    grid-row: unset;
+  }
+
+  .contacts__triggers {
+    row-gap: 20px;
+  }
+
+  .contacts__btn {
+    font-size: 12px;
+  }
+
+  .container {
+    width: 100%;
+    padding: 0px 15px;
+  }
+}
