--- a/activebox/css/style.css
+++ b/activebox/css/style.css
@@ -122,6 +122,10 @@ body {
   left: 0;
   z-index: 10;
 }
+.header--fixed {
+  position: fixed;
+  background-color: #313454;
+}
 .header__row {
   padding: 40px 0;
   display: -webkit-box;
